--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         }
 
         .header-content i {
-            font-size: 64px; /* Larger Instagram icon size */
-            color: #FF0020; /* Pink color for the icon */
+            font-size: 79px; /* Larger Instagram icon size */
+            color: #FF0020; /* Red color for the icon */
         }
 
         header {
