--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         }
 
         .header-content i {
-            font-size: 79px; /* Larger Instagram icon size */
+            font-size: 95px; /* Larger Instagram icon size */
+            margin-right: 10px;
             color: #FF0020; /* Red color for the icon */
         }
 
